RESOLVED FIXED104038
[User Timing] Fix negative durations
https://bugs.webkit.org/show_bug.cgi?id=104038
Summary [User Timing] Fix negative durations
James Simonsen
Reported 2012-12-04 13:55:31 PST
[User Timing] Fix negative durations
Attachments
Patch (2.36 KB, patch)
2012-12-04 13:56 PST, James Simonsen
tonyg: review+
James Simonsen
Comment 1 2012-12-04 13:56:18 PST
James Simonsen
Comment 2 2012-12-04 14:00:48 PST
Note You need to log in before you can comment on or make changes to this bug.