[User Timing] Fix negative durations https://bugs.webkit.org/show_bug.cgi?id=104038

Reviewed by Tony Gentilcore.

At some point, we went from passing in a duration to passing in the end time. User Timing
wasn't updated.

Tests: http/tests/w3c/webperf/submission/Intel/user-timing

* page/PerformanceMark.h:
(WebCore::PerformanceMark::PerformanceMark):
* page/PerformanceUserTiming.cpp:
(WebCore::UserTiming::measure):

Canonical link: https://commits.webkit.org/122146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136561 268f45cc-cd09-0410-ab3c-d52691b4dbfc